fixed access to restorePassword Handler
