# docs/swagger.yaml
@@ -69,6 +69,8 @@ definitions:
     properties:
       email:
         type: string
+      password:
+        type: string
     required:
     - email
     type: object
@@ -114,8 +116,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
       summary: restorePassword
       tags:
       - User
